# window

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: continuous-delivery-docker.yml  continuous-delivery.yml  continuous-integration.yml
src/: build.rs  main.rs  video.rs
src/utils/: args.rs  calculate_fps.rs  ffprobe.rs  format_time.rs  get_grey.rs  rgb_distance.rs  size.rs  step_size.rs  youtube.rs
